--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,22 @@
 version: v1
-
+managed:
+  enabled: true
 plugins:
-  - name: go
+  - remote: buf.build/grpc/plugins/web:v1.3.1-2
+    out: client/src/gen
+    opt: 
+      - import_style=commonjs+dts
+      - mode=grpcwebtext
+  - remote: buf.build/protocolbuffers/plugins/js:v3.20.1-1
+    out: client/src/gen
+    opt: 
+      - import_style=commonjs
+      - binary
+      - import_style=commonjs
+  - remote: buf.build/protocolbuffers/plugins/go:v1.28.0-1
     out: gen
     opt: paths=source_relative
-  - name: go-grpc
+  - remote: buf.build/grpc/plugins/go:v1.2.0-1
     out: gen
     opt: 
       - paths=source_relative
